--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
+-r initial-requirements.txt
 hdx-python-api~=5.9.7
-geopandas~=0.12.2
-Fiona~=1.9.1
-pandas~=1.5.3
-Shapely~=2.0.1
 requests~=2.28.0
 python-json-logger~=2.0.7
 git+https://github.com/OCHA-DAP/hdx-redis-lib.git@0.2.3
