--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,17 @@ jobs:
         run: |
           echo "Image tag is ${{ steps.tag_info.outputs.IMAGE_TAG }}"
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build temporary cached image
+        uses: docker/build-push-action@v4
+        with:
+          tags: initial
+          file: "Dockerfile.initial"
+          cache-from: type=gha
+          cache-to: type=gha,mode=min
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -36,8 +47,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.ECR_AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
       - name: Login to Public ECR
         uses: docker/login-action@v2
         with:
@@ -53,4 +62,3 @@ jobs:
           push: true
           tags: public.ecr.aws/unocha/hdx-jp-sw-pcode:${{ steps.tag_info.outputs.IMAGE_TAG }}
           cache-from: type=gha
-          cache-to: type=gha,mode=max
