Adding "load" to cached image

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,7 @@ jobs:
         with:
           tags: initial
           file: "Dockerfile.initial"
+          load: true
           cache-from: type=gha
           cache-to: type=gha,mode=min
 
