--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,10 +56,11 @@ jobs:
           password: ${{ secrets.ECR_AWS_SECRET_ACCESS_KEY }}
         env:
           AWS_REGION: us-east-1
+      - name: Docker images
+        run: docker images
 
       - name: Build, tag, and push image to Amazon ECR
         uses: docker/build-push-action@v4
         with:
           push: true
           tags: public.ecr.aws/unocha/hdx-jp-sw-pcode:${{ steps.tag_info.outputs.IMAGE_TAG }}
-          cache-from: type=gha
