--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,7 @@ jobs:
           tags: myinitial:latest
           file: "Dockerfile.initial"
           load: true
+          context: .
           cache-from: type=gha
           cache-to: type=gha,mode=min
 
@@ -63,4 +64,5 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
+          context: .
           tags: public.ecr.aws/unocha/hdx-jp-sw-pcode:${{ steps.tag_info.outputs.IMAGE_TAG }}
