setting pull to false

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,5 +64,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
+          pull: false
           context: .
           tags: public.ecr.aws/unocha/hdx-jp-sw-pcode:${{ steps.tag_info.outputs.IMAGE_TAG }}
