--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    services:
+      registry:
+        image: registry:2
+        ports:
+          - 5000:5000
     steps:
 
       - name: Checkout code
@@ -31,16 +36,18 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          # network=host driver-opt needed to push to local registry
+          driver-opts: network=host
 
       - name: Build temporary cached image
         uses: docker/build-push-action@v4
         with:
-          tags: myinitial:latest
+          tags: localhost:5000/myinitial:latest
           file: "Dockerfile.initial"
-          load: true
-          context: .
           cache-from: type=gha
           cache-to: type=gha,mode=min
+          push: true
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
@@ -64,6 +71,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          pull: false
-          context: .
+          build-contexts: |
+            myinitial:latest=docker-image://localhost:5000/myinitial:latest
           tags: public.ecr.aws/unocha/hdx-jp-sw-pcode:${{ steps.tag_info.outputs.IMAGE_TAG }}
