Clean up file extension

--- a/config/project_configuration.yml
+++ b/config/project_configuration.yml
@@ -6,9 +6,9 @@ global_pcodes:
 
 allowed_filetypes:
   - "csv"
-  - "geodatabase"
+  - "gdb"
   - "geojson"
-  - "geopackage"
+  - "gpkg"
   - "json"
   - "shp"
   - "topojson"
