--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@
 hdx-python-api~=6.3.5
 requests~=2.31.0
 python-json-logger~=2.0.7
+slack_sdk~=3.33.5
 git+https://github.com/OCHA-DAP/hdx-redis-lib.git@0.3.2
